flux/apps/floppy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: floppy
  namespace: multimedia-factory
spec:
  selector:
    app: floppy
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
