flux/apps/floppy/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: floppy
    namespace: multimedia-factory
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:pEkO5Xoxhs/dYGg4SAHyWH6M93moqMWptLi7ag==,iv:SUXSNarAjtcpvCSOC13A8yjiX23x7lYk7HFI5rVbvUM=,tag:lwPONU0bjDwZwy7nMA9v9w==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: floppy
              port: 8000
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSNmovVFJsNVAwSFJyRlY0
[...]
            /qNctSxuvuU81ygm0bbyiqVvwVFPdBu10I4/Ao6TUvWjc9rOAL+yNA==
            -----END AGE ENCRYPTED FILE-----
          recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
    encrypted_regex: hostnames|0
    lastmodified: "2026-10-02T19:11:17Z"
    mac: ENC[AES256_GCM,data:xfuGtIOohoCSj6MCw/jcxCHZ3DJpXsPLOzNpDR509LSdbY593J8bxdAwYOjfhAqDJ8AnUReRERr/oGK4/kV9/oLlfpzXEhg+penV2+cdBo5d/4PndrrWSIT9pFMgHH4l1Abppq37IbHjtTgLt1Sgi/cAabR9xe+PnBGnHZOcvRw=,iv:vgsuAdVbdG8PNu5jZdhlgfbJ8p2Ol8ryYYyutUF8sjo=,tag:SODgJtjqyw6BsxfuWINdlQ==,type:str]
    version: 3.13.3
